--- a/org.eclipse.egit.relengtools/OSGI-INF/l10n/bundle.properties
+++ b/org.eclipse.egit.relengtools/OSGI-INF/l10n/bundle.properties
@@ -11,4 +11,4 @@
 ###############################################################################
 #Properties file for org.eclipse.egit.relengtools
 Bundle-Vendor = Eclipse EGit
-Bundle-Name = Git RelEng Integration (Incubation)
+Bundle-Name = EGit Releng Tools Integration (Incubation)
