Add a releng tool for git
It supports picking a map project, selecting map file entries to
update and replacing lines in the mapfile with the new tag entry.

Bug: 328745
Change-Id: Ib1529eace4ba2c571358d1212e2c40cf00fee274
Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/org.eclipse.egit.relengtools/OSGI-INF/l10n/bundle.properties
+++ b/org.eclipse.egit.relengtools/OSGI-INF/l10n/bundle.properties
@@ -12,3 +12,6 @@
 #Properties file for org.eclipse.egit.relengtools
 Bundle-Vendor = Eclipse EGit
 Bundle-Name = EGit Releng Tools Integration (Incubation)
+
+command.tagAndRelease = Release...
+command.showInfo = Show Info
